--- a/package.json
+++ b/package.json
@@ -3,65 +3,88 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"yarn codegen:watch\"",
     "build": "next build",
     "analyze": "ANALYZE=true next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "export": "next build && next export",
-    "lint": "next lint",
+    "lint:fix": "yarn lint --fix; yarn format",
+    "lint": "eslint --ignore-path .eslintignore \"./**/*.+(ts|js|tsx)\"",
     "jest": "jest",
     "jest:watch": "jest --watch",
     "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
     "test": "npm run prettier:check && npm run lint && npm run typecheck && npm run jest",
     "storybook": "start-storybook -p 7001",
-    "storybook:build": "build-storybook"
+    "storybook:build": "build-storybook",
+    "format": "prettier --ignore-path .eslintignore \"./**/*.+(ts|js|tsx)\" --write",
+    "codegen": "graphql-codegen",
+    "codegen:watch": "yarn codegen --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@mantine/carousel": "5.6.2",
-    "@mantine/core": "5.6.2",
+    "@mantine/core": "5.9.6",
     "@mantine/dates": "5.6.2",
-    "@mantine/hooks": "5.6.2",
-    "@mantine/next": "5.6.2",
-    "@mantine/notifications": "5.6.2",
+    "@mantine/ds": "^5.9.6",
+    "@mantine/hooks": "5.9.6",
+    "@mantine/next": "5.9.6",
+    "@mantine/notifications": "5.9.6",
     "@mantine/prism": "5.6.2",
     "@next/bundle-analyzer": "^12.3.1",
+    "@next/font": "^13.1.1",
     "@tabler/icons": "^1.107.0",
     "cookies-next": "^2.1.1",
     "dayjs": "^1.11.6",
     "embla-carousel-react": "^7.0.3",
     "next": "13.0.0",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "urql": "^3.0.3"
   },
+  "resolutions": { "@types/react": "18.0.21", "@types/react-dom": "18.0.10" },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@dword-design/eslint-plugin-import-alias": "2.0.7",
+    "@graphql-codegen/cli": "^2.16.2",
+    "@graphql-codegen/typed-document-node": "^2.3.11",
+    "@graphql-codegen/typescript": "^2.8.6",
+    "@graphql-codegen/typescript-operations": "^2.5.11",
     "@next/eslint-plugin-next": "^12.1.4",
     "@storybook/react": "^6.5.13",
     "@testing-library/dom": "^8.12.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.0.4",
+    "@types/graphql": "14.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^18.11.4",
     "@types/react": "18.0.21",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "babel-loader": "^8.2.4",
+    "concurrently": "7.6.0",
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-mantine": "2.0.0",
+    "eslint-config-next": "13.1.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-storybook": "^0.5.7",
     "eslint-plugin-testing-library": "^5.2.0",
+    "eslint-plugin-typescript-sort-keys": "2.1.0",
+    "eslint-plugin-unused-imports": "2.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.7.1",
     "storybook-addon-turbo-build": "^1.1.0",
