--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,10 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "paths": {
+      "@/*": ["./*"],
+      "@/public/*": ["./public/*"]
+    },
     "plugins": [
       {
         "name": "next"
